# pixelclient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  nvs.csv.sample  nvs.sh  partitions.csv  sdkconfig
components/HttpServer/: CMakeLists.txt  HttpServer.cc  StaticAssetHandler.cc  WebSockets.cc
components/HttpServer/include/: HttpServer.h  StaticAssetHandler.h  WebSockets.h
components/Hub75Display/: CMakeLists.txt  Hub75Display.c  i2s_parallel.c  i2s_parallel.h  val2pwm.h
components/Hub75Display/include/: Hub75Display.h
components/libwebp/: CMakeLists.txt
hardware/v1/: Backplate-P4.stl  Frame-P4.stl  README.md
main/: Animation.cc  Animation.h  CMakeLists.txt  Config.cc  Config.h  Image.h  NetManager.cc  NetManager.h  NvsFlash.cc  NvsFlash.h  RootPage.cc  RootPage.h  WebPImage.cc  WebPImage.h  idf_component.yml  main.cc
